# mc833-project-2

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt  client
client/src/: client.c
server/: CMakeLists.txt  server
server/db/users/: alicesmith@example.com.json  asdf@xcv.com.json  bobjohnson@example.com.json  gabriel@gmail.com.json  janesmith@example.com.json  johndoe@example.com.json  lucas.farias@gmail.com.json  scentohletino@gmail.com.json  umpalumpa@gmail.com.json
server/src/: server.c
